--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,37 +1,51 @@
+@import url("https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap");
+
 h1 {
-  font-size: 4rem;
+  font-family: "Patrick Hand", cursive;
+  font-size: 8rem;
   text-align: center;
+  margin-bottom: 1rem;
+  color: #d5a103;
 }
 
 #tabellone {
-  width: 70%;
+  width: 86.7%;
   background-color: beige;
   margin-inline: auto;
-  padding: 1.2rem;
+  padding: 2rem;
+  border-radius: 40px;
+  text-align: center;
+  border: 2px solid gold;
 }
 
 .casella {
-  background-color: antiquewhite;
+  margin-inline: 0.6rem;
+  width: 4%;
+  background-color: #c5ad8e;
   margin-block: 1rem;
-  padding: 1.3rem;
-  padding-block: 2.3rem;
   text-align: center;
-  width: 10%;
   display: inline-block;
   border-radius: 50%;
   font-size: x-large;
   font-weight: bolder;
   cursor: pointer;
+  padding-inline: 0.5rem;
 }
 
 #genButton {
+  border: 4px solid gold;
+  background-color: #ffffa3;
+  cursor: pointer;
+  font-size: 2rem;
+  width: 20%;
   display: block;
   margin-inline: auto;
   margin-top: 3rem;
-  padding: 1.2rem;
+  padding: 2rem;
+  border-radius: 30px;
 }
 
 .pastNums {
-  color: red;
-  background-color: red;
+  border: 3px solid gold;
+  color: gold;
 }
